--- a/app/src/main/res/layout/activity_affiche_matiere_web.xml
+++ b/app/src/main/res/layout/activity_affiche_matiere_web.xml
@@ -6,7 +6,7 @@
     android:layout_height= "match_parent"
     tools:context=".AfficheMatiereWebActivity">
 
-    <android.support.v4.widget.NestedScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <WebView
@@ -14,6 +14,6 @@
             android:layout_width="match_parent" android:layout_height="match_parent"
         />
 
-    </android.support.v4.widget.NestedScrollView>
+    </androidx.core.widget.NestedScrollView>
 
 </RelativeLayout>
